# templates

./: Bakefile.sh  README.md  config.toml
c-cmake/: Bakefile.sh  CMakeLists.txt
c-meson/: Bakefile.sh  main.c
c-playground/: Bakefile.sh
deno-oak/: .editorconfig
deno-oak/src/: server.ts
go-default/: go.mod
html-page/: index.html
internal/files/: .editorconfig  .gitattributes
java-gradle/: settings.gradle
java-gradle/app/src/test/java/demo/: AppTest.java
next-app/: .gitignore  package.json  pnpm-lock.yaml
nodejs-express/: README.md
nodejs-library/: Bakefile.sh  README.md
nuxt-app/: package.json  pnpm-lock.yaml
rust-default/: Cargo.toml
rust-default/src/: cli.rs  main.rs
templates/c-cmake/: Bakefile.sh  CMakeLists.txt
templates/c-meson/: meson.build
templates/c-playground/: Bakefile.sh  main.c
templates/deno-oak/: deno.jsonc
templates/java-gradle/: .gitignore
templates/java-gradle/app/: build.gradle
templates/nodejs-library/: package.json
templates/web/: index.html
tools-c/: main.cpp
